I made the requested changes

--- a/GroupProject/index.html
+++ b/GroupProject/index.html
@@ -9,28 +9,28 @@
 </head>
 <body>
 <h1>World Wide Web</h1>
-<p>The WorldWideWeb (W3) is a wide-area <a href="#">hypermedia</a> information retrieval initiative aiming to give universal access to a large universe of documents.</p>
-<p>Everything there is online about W3 is linked directly or indirectly to this document, including an <a href="#">executive summary</a> of the project, <a href="mailinglist.html">Mailing lists</a> ,
-    <a href="#">Policy</a> , November's <a href="#">W3 news</a> , <a href="#">Frequently Asked Questions</a>.</p>
+<p>The WorldWideWeb (W3) is a wide-area <a href="hypermedia.html">hypermedia</a> information retrieval initiative aiming to give universal access to a large universe of documents.</p>
+<p>Everything there is online about W3 is linked directly or indirectly to this document, including an <a href="executivesummary.html">executive summary</a> of the project, <a href="mailinglist.html">Mailing lists</a> ,
+    <a href="policy.html">Policy</a> , November's <a href="w3news.html">W3 news</a> , <a href="frequentlyquestionasked.html">Frequently Asked Questions</a>.</p>
 <dl>
-    <dt><a href="#">What's out there?</a></dt>
-    <dd>Pointers to the world's online information, <a href="#">subjects</a> , <a href="#">W3 servers</a>, etc.</dd>
-    <dt><a href="#">Help</a></dt>
+    <dt><a href="Whats%20Out%20There.html">What's out there?</a></dt>
+    <dd>Pointers to the world's online information, <a href="subjects.html">subjects</a> , <a href="W3%20Servers.html">W3 servers</a>, etc.</dd>
+    <dt><a href="help1.html">Help</a></dt>
     <dd>on the browser you are using</dd>
-    <dt><a href="#">Software Products</a></dt>
-    <dd>A list of W3 project components and their current state. (e.g. <a href="#">Line Mode</a>,X11 <a href="#">Viola</a> , <a href="Nextstep.html">NeXTStep</a> , <a href="Servers.html">Servers</a> , <a href="Tools.html">Tools</a> , <a href="#">Mail robot</a> , <a href="Library.html">Library</a> )</dd>
-    <dt><a href="#">Technical</a></dt>
+    <dt><a href="Software%20Products.html">Software Products</a></dt>
+    <dd>A list of W3 project components and their current state. (e.g. <a href="Line%20Mode.html">Line Mode</a>,X11 <a href="Viola.html">Viola</a> , <a href="Nextstep.html">NeXTStep</a> , <a href="Servers.html">Servers</a> , <a href="Tools.html">Tools</a> , <a href="mailrobot.html">Mail robot</a> , <a href="Library.html">Library</a> )</dd>
+    <dt><a href="Technical.html">Technical</a></dt>
     <dd>Details of protocols, formats, program internals etc</dd>
-    <dt><a href="#">Bibliography</a></dt>
+    <dt><a href="bib.html">Bibliography</a></dt>
     <dd>Paper documentation on W3 and references.</dd>
-    <dt><a href="#">People</a></dt>
+    <dt><a href="people.html">People</a></dt>
     <dd>A list of some people involved in the project.</dd>
-    <dt><a href="#">History</a></dt>
+    <dt><a href="history.html">History</a></dt>
     <dd>A summary of the history of the project.</dd>
-    <dt><a href="#">How can I help ?</a></dt>
+    <dt><a href="help1.html">How can I help ?</a></dt>
     <dd>If you would like to support the web..</dd>
-    <dt><a href="#">Getting code</a></dt>
-    <dd>Getting the code by <a href="#">anonymous FTP</a> , etc.</dd>
+    <dt><a href="code.html">Getting code</a></dt>
+    <dd>Getting the code by <a href="anonymous.html">anonymous FTP</a> , etc.</dd>
 </dl>
 
 </body>
